(Tooltipp): fixed sidebar tooltips on stars account collapsed + on device graph on managerv2

--- a/src/renderer/global.css
+++ b/src/renderer/global.css
@@ -5,7 +5,9 @@ body {
 #react-root {
   display: flex;
   flex-direction: column;
-  min-height: 100vh;
+  height: 100vh;
+  width: 100vw;
+  overflow: hidden;
 }
 
 @font-face {
